Bugfix and improvement on the theme styling opt 3 1. Texts that are copied into the note editor now doesn't have the styles that it was taken from. 2. There was an unnecessary extra padding property on the anchor tags, it's removed now. 3. Added color on create and cancel button on the notes page.

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -205,6 +205,101 @@ div[contenteditable=true],
   outline: 0;
 }
 
+.button,
+.dark-workspacewrapper input#create,
+.light-workspacewrapper input#create,
+.dark-workspacewrapper input#cancel,
+.light-workspacewrapper input#cancel {
+  background: linear-gradient(35deg, #4a9748 10%, #54aa51);
+  border: 0;
+  border-radius: 3.5px;
+  padding: 2px 7px;
+  color: white;
+  outline: 0;
+}
+
+.button:hover,
+.button:focus,
+.dark-workspacewrapper input#create:hover,
+.dark-workspacewrapper input#create:focus,
+.light-workspacewrapper input#create:hover,
+.light-workspacewrapper input#create:focus {
+  background: linear-gradient(35deg, #48b648 10%, #5dbd5a);
+}
+
+input#create,
+input#cancel,
+#summary {
+  font: 14px "Montserrat Regular";
+}
+
+.dark-workspacewrapper input#cancel,
+.light-workspacewrapper input#cancel,
+.colored-cancel > a {
+  background: linear-gradient(35deg, #681212 10%, #851717);
+}
+.dark-workspacewrapper input#cancel:hover,
+.dark-workspacewrapper input#cancel:focus,
+.light-workspacewrapper input#cancel:hover,
+.light-workspacewrapper input#cancel:focus,
+.colored-cancel > a:hover,
+.colored-cancel > a:focus {
+  background: linear-gradient(35deg, #761414 10%, #9f3030);
+}
+
+.ql-editor *,
+.ql-editor:focus::before {
+  content: "";
+  background-color: #ffffe8 !important;
+  color: #171717 !important;
+}
+
+.ql-toolbar {
+  margin-bottom: 5px;
+}
+
+.dark-workspacewrapper .ql-snow,
+.dark-workspacewrapper .ql-container,
+.light-workspacewrapper .ql-snow,
+.light-workspacewrapper .ql-container {
+  border: 0 !important;
+}
+
+.dark-workspacewrapper .ql-editor,
+.dark-workspacewrapper .ql-editor *,
+.dark-workspacewrapper .ql-editor::before,
+.dark-workspacewrapper #summary,
+.dark-workspacewrapper #summary:-internal-autofill-selected {
+  background-color: #252c35 !important;
+  color: #fff !important;
+  outline: 0;
+  border: 0;
+}
+
+.light-workspacewrapper .ql-editor,
+.light-workspacewrapper .ql-editor *,
+.light-workspacewrapper .ql-editor::before,
+.light-workspacewrapper #summary,
+.light-workspacewrapper #summary:-internal-autofill-selected {
+  background-color: #dce6f0 !important;
+  outline: 0;
+  border: 0;
+}
+
+.light-workspacewrapper .ql-toolbar {
+  background: linear-gradient(35deg, #c6cfd8, #dce6f0) !important;
+}
+
+.dark-workspacewrapper .ql-toolbar {
+  background: linear-gradient(35deg, #1e232a, #252c35) !important;
+}
+
+.dark-workspacewrapper svg *,
+.dark-workspacewrapper .ql-picker-label::before {
+  stroke: #fff !important;
+  color: #fff !important;
+}
+
 #topbar {
   width: 100%;
   max-width: 100vw;
@@ -343,10 +438,6 @@ div[contenteditable=true],
       padding: 0 5px;
       border-radius: 2px;
       transition: all 250ms;
-    }
-
-    .colored-cancel > a {
-      background: linear-gradient(35deg, #681212de, #761414de, #851717de, #941919de) !important;
     }
 
     .light-background #applybook .selector.frontback a,
@@ -555,14 +646,6 @@ div[contenteditable=true],
   background-color: #815BA1 !important;
   color: #fff !important;
 }
-
-.button {
-  background: linear-gradient(35deg, #48b648 10%, #5dbd5a);
-  border: 0;
-  border-radius: 3.5px;
-  color: white;
-  outline: 0;
-}
 /* END OF CONTAINER STYLING */
 
 
@@ -624,7 +707,6 @@ strong {
 }
 
 a {
-  padding: 8px 0;
   transition: all 200ms;
   color: inherit;
   text-decoration: none;
@@ -641,24 +723,31 @@ a:hover {
   text-decoration: underline;
 }
 
-#topbar a:hover {
+#topbar a:hover,
+#topbar a:focus {
   text-decoration: none;
   filter: drop-shadow(0 0 8px #bbb);
 }
 
 #topbar .light-menu-tabs a:hover,
-#topbar .dark-menu-tabs a:hover {
+#topbar .light-menu-tabs a:focus,
+#topbar .dark-menu-tabs a:hover,
+#topbar .dark-menu-tabs a:focus {
   filter: 0;
   color: #ccc;  
 }
 
 .light-menu-tabs:hover,
-.dark-menu-tabs:hover {
+.light-menu-tabs:focus,
+.dark-menu-tabs:hover,
+.dark-menu-tabs:focus {
   background: linear-gradient(-35deg, #22516f, #265c7f, #2b688f, #30739f) !important;
 }
 
 #versepickerwrapper.light-menu-tabs:hover,
-#versepickerwrapper.dark-menu-tabs:hover {
+#versepickerwrapper.light-menu-tabs:focus,
+#versepickerwrapper.dark-menu-tabs:hover,
+#versepickerwrapper.dark-menu-tabs:focus {
   font-weight: normal;
   background: 0;
 }
