--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -17,6 +17,7 @@
  */
 
 /* I. BEGIN CSS RESETS */
+
 html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5,
 h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code,
 del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub,
@@ -29,8 +30,8 @@ output, ruby, section, summary, time, mark, audio, video {
   border: 0;
   background: transparent;
   vertical-align: baseline;
-  font: inherit;
-  font-size: 100%;
+  font: normal 16px 'Montserrat Regular', sans-serif;
+  line-height: 1.3;
 }
 article, aside, details, figcaption, figure, footer, header,
 hgroup, menu, nav, section {
@@ -93,7 +94,6 @@ html {
   font-family: "Esteban";
   src: url(/fonts/Esteban-Regular.ttf);
 }
-
 body {
   display: -webkit-box;
   display: -webkit-flex;
@@ -107,12 +107,11 @@ body {
   margin: 0;
   padding: 0;
   height: 100%;
-  font-family: "Esteban", serif;
-  line-height: 1.3;
+  font-family: 'Esteban', serif;
 }
 
 #themepicker {
-  font: normal 18px "Montserrat Regular", sans-serif !important;
+  font: normal 16px "Montserrat Regular", sans-serif;
   color: #171717;
   outline: 0;
   width: 135px;
@@ -200,7 +199,8 @@ div[contenteditable=true],
 #oneeditor .ql-editor,
 #oneeditor,
 .focusedverse {
-  background: #ffffe8;
+  background: #fff;
+  padding: 4px 4px;
   color: #171717;
   outline: 0;
 }
@@ -247,11 +247,14 @@ input#cancel,
   background: linear-gradient(35deg, #761414 10%, #9f3030);
 }
 
-.ql-editor *,
+.ql-editor,
 .ql-editor:focus::before {
-  content: "";
-  background-color: #ffffe8 !important;
-  color: #171717 !important;
+  background: #ffffe8 !important;
+  color: #171717 !important;  
+}
+
+.ql-editor {
+  filter: drop-shadow(0 0 10px #eee9);
 }
 
 .ql-toolbar {
@@ -274,6 +277,7 @@ input#cancel,
   color: #fff !important;
   outline: 0;
   border: 0;
+  filter: none;
 }
 
 .light-workspacewrapper .ql-editor,
@@ -284,6 +288,7 @@ input#cancel,
   background-color: #dce6f0 !important;
   outline: 0;
   border: 0;
+  filter: none;
 }
 
 .light-workspacewrapper .ql-toolbar {
@@ -322,7 +327,7 @@ input#cancel,
   -webkit-align-items: center;
       -ms-flex-align: center;
           align-items: center;
-  padding: .3em;
+  padding: 1px;
 }
 
   #topbar a {
@@ -330,7 +335,7 @@ input#cancel,
   }
 
   #topbar > span {
-    margin: 5px;
+    margin: 1px;
     text-align: center;
     white-space: nowrap;
     overflow: hidden;
@@ -341,15 +346,15 @@ input#cancel,
   
   .light-background #topbar > span,
   .dark-background #topbar > span {
-    padding: .3em .5em;
+    padding: 2px 3.5px;
     position: relative;
     flex-grow: 1;
-    -webkit-border-radius: 3px;
-    border-radius: 3px;
+    -webkit-border-radius: 1.5px;
+            border-radius: 1.5px;
   }
 
-  .light-background #topbar > span:first-child,
-  .dark-background #topbar > span:first-child {
+  .light-background #topbar > .fadeout,
+  .dark-background #topbar > .fadeout {
       position: relative;
       -webkit-flex-basis: initial;
           -ms-flex-preferred-size: initial;
@@ -357,18 +362,13 @@ input#cancel,
       margin: 0 5px;
     }
 
-  #topbar > span > a {
-    width: 100%;
-    height: 100%;
-  }
-
-    #topbar > span:first-child > span {
+    #topbar > .fadeout > span {
       border-left: 1.5px solid white;
       margin: .1em .3em;
       padding-left: .3em;
     }
 
-    #topbar > span:first-child > span:first-child {
+    #topbar > .fadeout > span:first-child {
       border-left: 0 !important;
     }
 /* II. a. GLOBAL STYLING: Workspace Page */
@@ -403,6 +403,10 @@ input#cancel,
          text-overflow: unset;
       max-width: 87.5vw;
       padding: 0 1em;
+    }
+
+    #versepickerwrapper span {
+      margin: 0 2px;
     }
 
     #applybook {
@@ -442,7 +446,7 @@ input#cancel,
 
     .light-background #applybook .selector.frontback a,
     .dark-background #applybook .selector.frontback a  {
-      background: linear-gradient(35deg, #75348c99, #9b61b099) !important;
+      background: linear-gradient(35deg, #75348c66, #9b61b066) !important;
       color: #fff !important;
     }
 
@@ -460,7 +464,7 @@ input#cancel,
   
     .light-background #applybook .selector.nt a,
     .dark-background #applybook .selector.nt a  {
-      background: linear-gradient(35deg, #0f0d8277, #27258f77) !important;
+      background: linear-gradient(35deg, #0f0d8266, #27258f66) !important;
       color: #fff !important;
     }
 
@@ -860,7 +864,6 @@ textarea {
     color: #efefef;
   }
 .menu-basic a {
-  padding: 0 .4em;
   border-style: solid;
   text-decoration: none!important;
   -webkit-appearance: button;
@@ -1089,23 +1092,32 @@ table.interlinear.rtl {
     display: none;
   }
 }
+
 @page {
   margin: 2cm;
 }
+
 @page :left {
   margin-right: 2cm;
   margin-left: 3cm;
 }
+
 @page :right {
   margin-right: 3cm;
   margin-left: 2cm;
 }
+
 @media (min-width: 500px) {
   #software-name {
     font-size: 6rem;
   }
-}
-
-.ql-editor, .bibleeditor {
-  padding: 4px 4px;
+  #topbar > span {
+    margin: 3px;
+  }
+  .light-background #topbar > span,
+  .dark-background #topbar > span {
+    padding: 3px 4px;
+    -webkit-border-radius: 2.5px;
+    border-radius: 2.5px;
+  }
 }
