--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -366,6 +366,10 @@ div[contenteditable=true],
   padding: 2px 7px;
   color: white;
   outline: 0;
+  -webkit-appearance: button;
+  -moz-appearance: button;
+  appearance: button;
+  cursor: pointer;
 }
 
 .button:hover,
@@ -485,6 +489,16 @@ input#cancel,
   color: #171717;
 }
 
+.light-menu-tabs a,
+.dark-menu-tabs a {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  -webkit-appearance: button;
+  -moz-appearance: button;
+  appearance: button;
+}
+
 #topbar > span {
   margin: 1px;
   text-align: center;
@@ -550,6 +564,20 @@ input#cancel,
 #versepickerwrapper.dark-menu-tabs:focus {
   font-weight: normal;
   background: 0;
+}
+
+#versepickerwrapper.light-menu-tabs a,
+#versepickerwrapper.dark-menu-tabs a {
+  height: 100%;
+  width: 100%;
+  flex-grow: 1;
+}
+
+#versepickerwrapper.light-menu-tabs,
+#versepickerwrapper.dark-menu-tabs {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
 }
 
 /* II. a. GLOBAL STYLING: Workspace Page */
@@ -685,11 +713,13 @@ input#cancel,
 
 /* II. c. GLOBAL STYLING: Preference page */
 
-#themepicker {
+#themepicker,
+.settings-container select {
   font: normal 16px "Montserrat Regular", sans-serif;
   color: #171717;
   outline: 0;
-  width: 135px;
+  width: fit-content;
+  height: 1.75em;
 }
 
 #themepicker:focus, 
@@ -706,6 +736,46 @@ input#cancel,
 #themepicker option[value="2"] {
   background-color: #171717;
   color: #5e92b4 !important;
+}
+
+.setting-input {
+  width: 2.25em !important;
+  height: 1.5em;
+  font: normal 1em "Montserrat Regular", sans-serif;
+}
+
+.settings-container {
+  position: relative;
+}
+
+.tooltip::before {
+  display: inline-block;
+  content: "※";
+  width: 1em;
+  height: 1em;
+  cursor: context-menu;
+  opacity: 0.7;
+  vertical-align: super;
+  font-size: .8em;
+}
+
+.tooltip:hover::before {
+  opacity: 1;
+}
+
+.tooltip-text {
+  pointer-events: none;
+  display: none;
+  position: absolute;
+  border-radius: 3px;
+  padding: 2px;
+  background-color: #fff;
+  border: 1px solid #171717;
+}
+
+.tooltip:hover + .tooltip-text {
+  display: block !important;
+  z-index: 1 !important;
 }
 
 /* END OF GLOBAL STYLING */
@@ -880,9 +950,6 @@ input#cancel,
 .menu-basic a {
   border-style: solid;
   text-decoration: none!important;
-  -webkit-appearance: button;
-  -moz-appearance: button;
-  appearance: button;
 }
 .menu-advanced span {
   margin-right: 0.2em;
