--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -474,6 +474,7 @@ input#cancel,
   -webkit-flex-direction: row;
   -ms-flex-direction: row;
   flex-direction: row;
+  flex-wrap: wrap;
   -webkit-box-pack: space-evenly;
   -webkit-justify-content: space-evenly;
   -ms-flex-pack: space-evenly;
@@ -492,8 +493,6 @@ input#cancel,
 .light-menu-tabs a,
 .dark-menu-tabs a {
   position: relative;
-  width: 100%;
-  height: 100%;
   -webkit-appearance: button;
   -moz-appearance: button;
   appearance: button;
@@ -566,11 +565,28 @@ input#cancel,
   background: 0;
 }
 
+#versepickerwrapper.light-menu-tabs span,
 #versepickerwrapper.light-menu-tabs a,
+#versepickerwrapper.dark-menu-tabs span,
 #versepickerwrapper.dark-menu-tabs a {
-  height: 100%;
   width: 100%;
-  flex-grow: 1;
+  height: 100%;
+}
+
+#versepickerwrapper.light-menu-tabs #applychapter,
+#versepickerwrapper.light-menu-tabs #applyverse,
+#versepickerwrapper.light-menu-tabs #applybook span,
+#versepickerwrapper.light-menu-tabs #applychapter a,
+#versepickerwrapper.light-menu-tabs #applyverse a,
+#versepickerwrapper.light-menu-tabs #applybook a,
+#versepickerwrapper.dark-menu-tabs #applychapter,
+#versepickerwrapper.dark-menu-tabs #applyverse,
+#versepickerwrapper.dark-menu-tabs #applybook span,
+#versepickerwrapper.dark-menu-tabs #applychapter a,
+#versepickerwrapper.dark-menu-tabs #applyverse a,
+#versepickerwrapper.dark-menu-tabs #applybook a {
+  width: auto !important;
+  height: auto !important;
 }
 
 #versepickerwrapper.light-menu-tabs,
@@ -821,7 +837,7 @@ input#cancel,
 .light-menu-tabs {
   background: linear-gradient(-35deg, #124568, #144f76, #175985, #196394) !important;
   color: #fff !important;
-  filter: drop-shadow(0 0 10px #999);
+  /* filter: drop-shadow(0 0 10px #999); */
 }
 
 .light-menu-tabs a,
@@ -988,7 +1004,7 @@ input#cancel,
   -webkit-flex: 1;
   -ms-flex: 1;
   flex: 1;
-  overflow: auto;
+  overflow-x: hidden;
 }
 #workspacewrapper > p {
   font-family: "Montserrat Regular", sans-serif;
