--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -20,7 +20,7 @@
 /* I. BEGIN CSS RESETS */
 
 html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5,
-h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code,
+h6, p, blockquote, pre, a, abbr, acronym, address, big, cite,
 del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub,
 sup, tt, var, b, u, i, center, dl, dt, dd, fieldset, form, label,
 legend, table, caption, tbody, tfoot, thead, article, aside, canvas,
