Long press history work on Android too
https://github.com/bibledit/cloud/issues/675

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1254,9 +1254,11 @@ table.interlinear.rtl {
 
 #navigateforward {
   cursor: pointer;
+  user-select: none;
 }
 #navigateback {
   cursor: pointer;
+  user-select: none;
 }
 #navigateforward:hover {
   text-decoration: underline;
