Print all pages of search results
https://github.com/bibledit/cloud/issues/768

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1236,6 +1236,9 @@ table.interlinear.rtl {
   #topbar {
     display: none;
   }
+  /* Print entire page with all search results: */
+  * { overflow: visible !important; }
+  .page { page-break-after:always; }
 }
 
 @page {
