--- a/unittests/tests/editor.css
+++ b/unittests/tests/editor.css
@@ -64,6 +64,9 @@ text-indent: 3.2mm;
 }
 .fe, .b-fe {
 }
+.fig, .b-fig {
+text-align: center;
+}
 .fk, .i-fk {
 font-style: italic;
 font-weight: bold;
