Support display of USFM tables in editor without changing the USFM source text, #860

--- a/css/editor.css
+++ b/css/editor.css
@@ -68,3 +68,11 @@
 [class^='i-th'] {
   font-style: italic;
 }
+[class^='i-th2']::before,
+[class^='i-th3']::before,
+[class^='i-tc2']::before,
+[class^='i-tc3']::before {
+  content: "|";
+  display: inline-block;
+  padding-right: 0.25em;
+}
