Put the word-level attributes in the Quill editor
https://github.com/bibledit/cloud/issues/977

--- a/css/editor.css
+++ b/css/editor.css
@@ -62,6 +62,20 @@
 .light-background .b-notes {
   background: #171717 !important;
 }
+
+.b-wordlevelattributes {
+  height: 1px;
+  width: 25%;
+  margin: 0.5em;
+  background: black;
+}
+.dark-background .b-wordlevelattributes {
+  background: #efefef !important;
+}
+.light-background .b-wordlevelattributes {
+  background: #171717 !important;
+}
+
 [class^='i-note'] {
   cursor: pointer;
 }
